More sim classes and update to grammar

--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
   "version": "1.0.0",
   "dependencies": {
     "ohm-js": "^0.14.0"
+  },
+  "devDependencies": {
+    "@types/node": "^10.12.18",
+    "nodemon": "^1.18.9"
   }
 }
